Correção nos imports svg

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <nav class="nav-bar">
             <div class="logo">
-                <img src="/assets/img/logo.svg" alt="Logo Rastreio Xpress">
+                <img src="assets/img/logo.svg" alt="Logo Rastreio Xpress">
                 <h1>Rastreio Express</h1>
             </div>
             <div class="nav-list">
@@ -46,7 +46,7 @@
             <input type="text" placeholder="Código de rastreio">
             <button><a href="#">RASTREAR</a></button>
         </div>
-        <img src="/assets/img/boxes.svg" alt="Caixas verdes">
+        <img src="assets/img/boxes.svg" alt="Caixas verdes">
     </section>
 
     <!-- Sessao Sobre nos. A section possui divs para o titulo, container de cards e para uma sessao com texto e botao de cadastro. -->
@@ -58,7 +58,7 @@
         </div>
         <div class="card-container">
             <div class="card">
-                <img src="/assets/img/search.svg" alt="">
+                <img src="assets/img/search.svg" alt="">
                 <div class="card-content">
                     <h3>Busque por uma encomenda</h3>
                     <p>Use o rastreio Express para encontrar suas encomendas. Basta colar o código de rastreio no campo
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/assets/img/phone_loc.svg" alt="">
+                <img src="assets/img/phone_loc.svg" alt="">
                 <div class="card-content">
                     <h3>Acompanhe suas encomendas</h3>
                     <p>O Rastreio Express foi desenvolvido para facilitar a visualização de suas encomendas. Nada de
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="/assets/img/notification_bell.svg" alt="">
+                <img src="assets/img/notification_bell.svg" alt="">
                 <div class="card-content">
                     <h3>Receba notificações</h3>
                     <p>No Rastreio Express você acompanha tudo o que acontece com a sua encomenda diretamente no seu
@@ -97,12 +97,12 @@
             <p>Porém, quem faz envios com etiquetas geradas na plataforma do Melhor Envio também consegue rastrear
                 encomendas enviadas pela Jadlog, Buslog, Via Brasil e LATAM Cargo.</p>
         </div>
-        <img src="/assets/img/image_green_background.svg" alt="">
+        <img src="assets/img/image_green_background.svg" alt="">
     </section>
 
     <!-- Sessão Ajuda -->
     <section class="ajuda" id="ajuda">
-        <img src="/assets/img/need_help.svg" alt="">
+        <img src="assets/img/need_help.svg" alt="">
         <div class="ajuda-content">
             <h1>Precisa de ajuda com algum rastreio?</h1>
             <p>Veja o que fazer em cada um dos casos:</p>
